--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DVD Logo Bouncer</title>
+    <title>Bouncing Box ADHD</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -16,14 +16,15 @@
             </div>
             <div>
                 <label for="radiusSlider">Radius:</label>
-                <input type="range" id="radiusSlider" min="1" max="20" value="10">
+                <input type="range" id="radiusSlider" min="1" max="30" value="15">
             </div>
             <div>
                 <label for="trailSlider">Trail:</label>
                 <input type="range" id="trailSlider" min="0" max="0.5" value="0.15" step="0.01">
             </div>
         </div>
-        <canvas id="animationCanvas" width="800" height="600"></canvas>
+        <button id="patternButton">Change Pattern</button>
+        <canvas id="animationCanvas" width="809" height="601"></canvas>
     </div>
     <script src="script.js"></script>
 </body>
