Add color change button and implement pattern toggle feature for balls

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
             </div>
         </div>
         <div id="buttons">
-            <button id="patternButton" class="btn">Change Pattern</button>
+            <button id="patternButton" class="btn">Change Direction</button>
             <button id="spawnBallButton" class="btn">Spawn New Ball</button>
-            <!-- <button id="changeColor" class="btn">Change Color</button> -->
+            <button id="togglePatternButton" class="btn">Change Pattern</button>
             <button id="muteButton" class="btn">Toggle Sound</button>
         </div>
         <canvas id="animationCanvas" width="809" height="601"></canvas>
